Reverting back to original index.html.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>anthony760.github.io</title>
 </head>
 <body>
-Hello, world!
+<p>Hello, world! :)</p>
+<p>Just starting . . .</p>
 </body>
 </html>
