--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>anthony760.github.io</title>
 </head>
 <body>
-<p>Hello, world! :)</p>
-<p>Just starting . . .</p>
+<p>Hello, world :)</p>
+<p>Welcome to my GitHub user page!</p>
 </body>
 </html>
