--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>anthony760.github.io</title>
 </head>
 <body>
-<p>Hello, world! :)</p>
+<p>Hello, world :)</p>
+<p>Welcome to my GitHub Pages website!</p>
 </body>
 </html>
