--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>anthony760.github.io</title>
+  <title>anthony760.github.io - Welcome</title>
 </head>
 <body>
 <p>Hello, world :)</p>
