Add paragraph of intro text and some div structuring.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <title>anthony760.github.io</title>
 </head>
 <body>
-<p>Hello, world :)</p>
-<p>Welcome to my GitHub user page!</p>
+  <div>
+    <p>Hello, world :)</p>
+    <p>Welcome to my GitHub user page!</p>
+    <p>Currently I'm just playing around with this, but it will be fun to get up and running soon.
+  </div>
 </body>
 </html>
