Added link to style sheet.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>anthony760.github.io</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div>
