Add LinkedIn profile and format intro paragraph.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <div>
     <p>Hello, world :)</p>
     <p>Welcome to my GitHub user page!</p>
-    <p>Currently I'm just playing around with this, but it will be fun to get up and running soon.</p>
+    <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
     <p>For now, checkout my social media profiles and company website:</p?
     <ul>
       <li><a href="https://github.com/anthony760">GitHub</a></li>
       <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
       <li><a href="https://twitter.com/anthonylopezme">Twitter</a></li>
+      <li><a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
       <li><a href="http://eventful.com/events">Eventful.com</a></li>
     </ul>
   </div>
