Add h1 and h2 tags to headings.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div>
-    <p>Hello, world :)</p>
-    <p>Welcome to my GitHub user page!</p>
+    <h1>Hello, world :)</h1>
+    <h2>Welcome to my GitHub user page!</h2>
     <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
     <p>For now, checkout my social media profiles and company website:</p?
     <ul>
