* Correct structure typo in index.html and add ID main to div. * Add padding to div with ID of main.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div>
+  <div id="main">
     <h1>Hello, world :)</h1>
     <h2>Welcome to my GitHub user page!</h2>
     <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
-    <p>For now, checkout my social media profiles and company website:</p?
+    <p>For now, checkout my social media profiles and company website:</p>
     <ul>
       <li><a href="https://github.com/anthony760">GitHub</a></li>
       <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
