Add Bootstrap framework.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>anthony760.github.io</title>
-  <link href="normalize.css" rel="stylesheet" type="text/css" />
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-  <div id="main">
-    <h1>Hello, world :)</h1>
-    <h2>Welcome to my GitHub user page!</h2>
-    <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
-    <p>For now, checkout my social media profiles and company website:</p>
-    <ul>
-      <li><a href="https://github.com/anthony760">GitHub</a></li>
-      <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
-      <li><a href="https://twitter.com/anthonylopezme">Twitter</a></li>
-      <li><a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
-      <li><a href="http://eventful.com/events">Eventful.com</a></li>
-    </ul>
-  </div>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>anthony760.github.io</title>
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" href="style.css">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Poppins" rel="stylesheet">
+    </head>
+    <body>
+      <div class="container">
+        <div class="row" id="header">
+          <div class="col-md-12">
+            <h1>Hello, world :)</h1>
+            <h2>Welcome to my GitHub user page!</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
+            <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
+            <ul>
+              <li><a href="https://github.com/anthony760">GitHub</a></li>
+              <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
+              <li><a href="https://twitter.com/anthonylopezme">Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
+              <li><a href="http://eventful.com/events">Eventful.com</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </body>
+
 </html>
