Add side profile image and responsive structure.

--- a/index.html
+++ b/index.html
@@ -11,23 +11,30 @@
     </head>
     <body>
       <div class="container">
-        <div class="row" id="header">
-          <div class="col-md-12">
-            <h1>Hello, world :)</h1>
-            <h2>Welcome to my GitHub user page!</h2>
-          </div>
-        </div>
         <div class="row">
-          <div class="col-md-12">
-            <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
-            <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
-            <ul>
-              <li><a href="https://github.com/anthony760">GitHub</a></li>
-              <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
-              <li><a href="https://twitter.com/anthonylopezme">Twitter</a></li>
-              <li><a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
-              <li><a href="http://eventful.com/events">Eventful.com</a></li>
-            </ul>
+          <div class="hidden-xs col-sm-3 col-md-4">
+            <img class="img-responsive" src="images/anthony_profile.jpg" alt="Profile picture of Anthony">
+          </div>
+          <div class="col-xs-12 col-sm-9 col-md-8">
+            <div class="row" id="header">
+              <div class="col-md-12">
+                <h1>Hello, world :)</h1>
+                <h2>Welcome to my GitHub Pages website!</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
+                <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
+                <ul>
+                  <li><a href="https://github.com/anthony760">GitHub</a></li>
+                  <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
+                  <li><a href="https://twitter.com/anthonylopezme">Twitter</a></li>
+                  <li><a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
+                  <li><a href="http://eventful.com/events">Eventful.com</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
