Add navigation icons and tweak link appearence.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Poppins" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
       <div class="container">
@@ -26,12 +27,13 @@
               <div class="col-md-12">
                 <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
                 <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
+                <hr />
                 <ul>
-                  <li><a href="https://github.com/anthony760">GitHub</a></li>
-                  <li><a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
-                  <li><a href="https://twitter.com/anthonylopezme">Twitter</a></li>
-                  <li><a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
-                  <li><a href="http://eventful.com/events">Eventful.com</a></li>
+                  <li><i class="fa fa-github-alt"></i> <a href="https://github.com/anthony760">GitHub</a></li>
+                  <li><i class="fa fa-instagram"></i> <a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
+                  <li><i class="fa fa-twitter"></i> <a href="https://twitter.com/anthonylopezme">Twitter</a></li>
+                  <li><i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
+                  <li><i class="fa fa-user"></i> <a href="http://eventful.com/events">Eventful</a></li>
                 </ul>
               </div>
             </div>
