Change i tags to spans for social link icons.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
                 <hr />
                 <ul>
-                  <li><i class="fa fa-github-alt"></i> <a href="https://github.com/anthony760">GitHub</a></li>
-                  <li><i class="fa fa-instagram"></i> <a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
-                  <li><i class="fa fa-twitter"></i> <a href="https://twitter.com/anthonylopezme">Twitter</a></li>
-                  <li><i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
-                  <li><i class="fa fa-user"></i> <a href="http://eventful.com/events">Eventful</a></li>
+                  <li><span class="fa fa-github-alt"></span> <a href="https://github.com/anthony760">GitHub</a></li>
+                  <li><span class="fa fa-instagram"></span> <a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
+                  <li><span class="fa fa-twitter"></span> <a href="https://twitter.com/anthonylopezme">Twitter</a></li>
+                  <li><span class="fa fa-linkedin"></span> <a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
+                  <li><span class="fa fa-user"></span> <a href="http://eventful.com/events">Eventful</a></li>
                 </ul>
               </div>
             </div>
