Add targets for external links.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
                 <hr />
                 <ul>
-                  <li><span class="fa fa-github-alt"></span> <a href="https://github.com/anthony760">GitHub</a></li>
-                  <li><span class="fa fa-instagram"></span> <a href="https://www.instagram.com/anthonylopezme/">Instagram</a></li>
-                  <li><span class="fa fa-twitter"></span> <a href="https://twitter.com/anthonylopezme">Twitter</a></li>
-                  <li><span class="fa fa-linkedin"></span> <a href="https://www.linkedin.com/in/anthony760/">LinkedIn</a></li>
-                  <li><span class="fa fa-user"></span> <a href="http://eventful.com/events">Eventful</a></li>
+                  <li><span class="fa fa-github-alt" aria-hidden="true"></span> <a href="https://github.com/anthony760" target="_blank">GitHub</a></li>
+                  <li><span class="fa fa-instagram" aria-hidden="true"></span> <a href="https://www.instagram.com/anthonylopezme/" target="_blank">Instagram</a></li>
+                  <li><span class="fa fa-twitter" aria-hidden="true"></span> <a href="https://twitter.com/anthonylopezme" target="_blank">Twitter</a></li>
+                  <li><span class="fa fa-linkedin" aria-hidden="true"></span> <a href="https://www.linkedin.com/in/anthony760/" target="_blank">LinkedIn</a></li>
+                  <li><span class="fa fa-user" aria-hidden="true"></span> <a href="http://eventful.com/events" target="_blank">Eventful</a></li>
                 </ul>
               </div>
             </div>
