Fixing incorrect Facebook URL.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <li><span class="fa fa-github-alt" aria-hidden="true"></span> <a href="https://github.com/anthony760" target="_blank">GitHub</a></li>
                   <li><span class="fa fa-instagram" aria-hidden="true"></span> <a href="https://www.instagram.com/anthonylopezme/" target="_blank">Instagram</a></li>
                   <li><span class="fa fa-twitter" aria-hidden="true"></span> <a href="https://twitter.com/anthonylopezme" target="_blank">Twitter</a></li>
-                  <li><span class="fa fa-facebook" aria-hidden="true"></span> <a href="https://facebook.com/anthony760" target="_blank">Facebook</a></li>
+                  <li><span class="fa fa-facebook" aria-hidden="true"></span> <a href="https://www.facebook.com/anthonylopezme" target="_blank">Facebook</a></li>
                   <li><span class="fa fa-linkedin" aria-hidden="true"></span> <a href="https://www.linkedin.com/in/anthony760/" target="_blank">LinkedIn</a></li>
                   <li><span class="fa fa-user" aria-hidden="true"></span> <a href="http://eventful.com/events" target="_blank">Eventful</a></li>
                 </ul>
