--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <li><span class="fa fa-twitter" aria-hidden="true"></span> <a href="https://twitter.com/anthonylopezme" target="_blank">Twitter</a></li>
                   <li><span class="fa fa-facebook" aria-hidden="true"></span> <a href="https://www.facebook.com/anthonylopezme" target="_blank">Facebook</a></li>
                   <li><span class="fa fa-linkedin" aria-hidden="true"></span> <a href="https://www.linkedin.com/in/anthony760/" target="_blank">LinkedIn</a></li>
-                  <li><span class="fa fa-user" aria-hidden="true"></span> <a href="http://eventful.com/events" target="_blank">Eventful</a></li>
+                  <li><span class="fa fa-user" aria-hidden="true"></span> <a href="https://www.audacy.com/" target="_blank">Audacy</a></li>
                 </ul>
               </div>
             </div>
