--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
           <div class="col-xs-12 col-sm-9 col-md-8">
             <div class="row" id="header">
               <div class="col-md-12">
-                <h1>Hello, world :)</h1>
+                <h1>Hello, World :)</h1>
                 <h2>Welcome to my GitHub Pages website!</h2>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
                 <p>Currently, I'm just playing around with this, but it will be fun to get up and running soon.</p>
-                <p>For now, check out my social media profiles to connect with me, as well as my company website:</p>
+                <p>For now, check out my networking and social media profiles to connect with me:</p>
                 <hr />
                 <ul>
                   <li><span class="fa fa-github-alt" aria-hidden="true"></span> <a href="https://github.com/anthony760" target="_blank">GitHub</a></li>
+                  <li><span class="fa fa-linkedin" aria-hidden="true"></span> <a href="https://www.linkedin.com/in/anthony760/" target="_blank">LinkedIn</a></li>
                   <li><span class="fa fa-instagram" aria-hidden="true"></span> <a href="https://www.instagram.com/anthonylopezme/" target="_blank">Instagram</a></li>
                   <li><span class="fa fa-twitter" aria-hidden="true"></span> <a href="https://twitter.com/anthonylopezme" target="_blank">Twitter</a></li>
                   <li><span class="fa fa-facebook" aria-hidden="true"></span> <a href="https://www.facebook.com/anthonylopezme" target="_blank">Facebook</a></li>
-                  <li><span class="fa fa-linkedin" aria-hidden="true"></span> <a href="https://www.linkedin.com/in/anthony760/" target="_blank">LinkedIn</a></li>
                 </ul>
               </div>
             </div>
