--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                 </ul>
               </div>
             </div>
+            <div class="row">
+              <div class="col-md-12">
+                  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3984562968101520"
+     crossorigin="anonymous"></script>
+              </div>
+            </div>
           </div>
         </div>
       </div>
