--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Poppins" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3984562968101520" crossorigin="anonymous"></script>  
     </head>
     <body>
       <div class="container">
@@ -35,12 +36,6 @@
                   <li><span class="fa fa-twitter" aria-hidden="true"></span> <a href="https://twitter.com/anthonylopezme" target="_blank">Twitter</a></li>
                   <li><span class="fa fa-facebook" aria-hidden="true"></span> <a href="https://www.facebook.com/anthonylopezme" target="_blank">Facebook</a></li>
                 </ul>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3984562968101520"
-     crossorigin="anonymous"></script>
               </div>
             </div>
           </div>
